fix(asset-inventory-service): auditoría de capacidad productiva
Revisión del código entregado contra el mandato "capacidad productiva real".
Defectos corregidos:

- Filtros fabricante/modelo: el controlador los recibía pero no los pasaba al
  servicio (filtraban en silencio) -> se propagan a search/DeviceSpecifications
  como búsqueda parcial insensible a mayúsculas.
- Readiness falso: /health/readiness devolvía UP fijo -> ahora verifica
  PostgreSQL (Connection.isValid) y devuelve 503 DOWN si la BD no responde.
- Paginación sin tope: size acotado a MAX_PAGE_SIZE=100 (evita DoS).
- sort sin validar (campo arbitrario -> 500 con fuga interna) -> whitelist de
  campos; campo no permitido -> 400 INVALID_REQUEST problem+json (RNF-09).
- LIKE sin escapar %/_ en búsquedas parciales -> se escapan los comodines.

Entorno: la JVM de ejecución es Java 24 y el Byte Buddy de Mockito 5.11 no lo
soporta -> se fija -Dnet.bytebuddy.experimental=true en Surefire (POM padre)
para los tests con @MockBean.

mvn verify -> 40 tests, cobertura >=70%, 0 Checkstyle.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>